# logseq-api-mcp

./: .env.template  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  MIGRATION.md  README.md  RELEASE-NOTES.md  ROADMAP.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.claude/skills/: release.md
.github/workflows/: ci.yml  pr-validation.yml  quality.yml
src/: logging_setup.py  registry.py  server.py
src/client/: config.py  exceptions.py  logseq_client.py
src/fs/: __init__.py  paths.py
src/parser/: markdown.py
src/privacy/: exclude_tags.py
src/tools/: __init__.py  _marker.py  append_block_in_page.py  create_page.py  delete_block.py  delete_page.py  edit_block.py  find_pages_by_property.py  fs_append.py  fs_read_excalidraw.py  fs_read_page.py  fs_write_excalidraw.py  fs_write_page.py  get_all_page_content.py  get_all_pages.py  get_block_content.py  get_linked_flashcards.py  get_linked_references.py  get_page_backlinks.py  get_page_blocks.py  get_page_links.py  get_pages_from_namespace.py  get_pages_tree_from_namespace.py  insert_nested_block.py  query.py  rename_page.py  (+4 more)
tests/: conftest.py  test_append_block_in_page.py  test_basic_functionality.py  test_create_page.py  test_dotenv_compat.py  test_edit_block.py  test_get_all_page_content.py  test_get_all_pages.py  test_get_block_content.py  test_get_linked_flashcards.py  test_get_page_backlinks.py  test_get_page_blocks.py  test_get_page_links.py  test_logging.py  test_mcp_server.py  test_no_stdout_pollution.py  test_no_vector_module.py  test_public_wrappers_take_client.py  test_skill_docs.py  test_tools_surface.py
(+52 files in other folders)
