[project]
name = "logseq-api-mcp"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.13.4",
    "load-dotenv>=0.1.0",
    "mcp[cli]>=1.23.0",
    "pathlib>=1.0.1",
    "starlette>=0.49.1",
]

[dependency-groups]
dev = [
    "ruff>=0.11.12",
    "mypy>=1.8.0",
    "bandit>=1.7.5",
    "pip-audit>=2.7.0",
    "pip-licenses>=4.3.0",
    "pre-commit>=4.0.0",
]
test = [
    "pytest>=8.3.5",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=4.1.0",
]
vector = [
    "lancedb>=0.6",
    "pyarrow>=14.0",
    "watchdog>=4.0",
    "portalocker>=2.0",
]

[project.scripts]
logseq-sync = "src.vector.sync:cli_entry"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
