[project]
name = "logseq-api-mcp"
version = "1.0.1"
description = "Model Context Protocol server for Logseq knowledge bases"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.13.4",
    "mcp[cli]>=1.23.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "starlette>=0.49.1",
]

[dependency-groups]
dev = [
    "ruff>=0.11.12",
    "mypy>=1.8.0",
    "bandit>=1.7.5",
    "pip-audit>=2.7.0",
    "pip-licenses>=4.3.0",
    "pre-commit>=4.0.0",
    "types-PyYAML>=6.0",
]
test = [
    "pytest>=8.3.5",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=4.1.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
